src/test/resources/com/puppycrawl/tools/checkstyle/checks/javadoc/invalidjavadocposition/InputInvalidJavadocPosition2[InputInvalidJavadocPosition]#[T]_method3().mjava
    /** valid */
    <T> T method3() { return null; }

